--- a/nginx-server/nginx-deployment.yaml
+++ b/nginx-server/nginx-deployment.yaml
@@ -26,3 +26,10 @@ spec:
             memory: "128Mi"
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: nginx-config-volume
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: nginx-config-volume
+        configMap:
+          name: nginx-config
